--- a/style.css
+++ b/style.css
@@ -14,14 +14,11 @@ body {
   background-color: green;
   padding-bottom: 15px;
   padding-left: 20px;
+  z-index: 2;
 }
 
 #titulo {
   color: white;
-}
-
-#main {
-  margin-top: 130px;
 }
 
 .border {
@@ -41,4 +38,75 @@ body {
   margin-top: 10px;
   vertical-align: top;
   margin-left: 10px;
+}
+
+#section-licoes-aprendidas {
+  display: inline-block;
+  max-width: 40%;
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-bottom: 70px;
+  border: 1px dashed green;
+  border-radius: 6%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#section-licoes-a-aprender {
+  display: inline-block;
+  max-width: 40%;
+  margin-top: 50px;
+  vertical-align: top;
+  margin-left: 10px;
+  margin-bottom: 70px;
+  border: 1px dashed green;
+  border-radius: 6%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#nav {
+  display: block;
+  margin-top: 350px;
+  margin-left: 140px;
+}
+
+#nav a {
+  background-color: green;
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  padding: 10px 80px;
+  font-size: 22px;
+}
+
+#nav a:hover {
+  background-color: wheat;
+  text-decoration: none;
+  color: cadetblue;
+  font-weight: 600;
+  padding: 10px 80px;
+  font-size: 22px;
+}
+
+#minha_foto {
+  position: absolute;
+  width: 200px;
+  left: 170px;
+  right: 0;
+  top: 120px;
+  border-radius: 50%;
+}
+
+.skills {
+  font-style: italic;
+  color: gray;
+}
+
+#rodape {
+  margin-top: 50px;
+}
+
+#rodape h3 {
+  font-size: 12px;
 }
